# cli_in_rust_tutorial

./: Cargo.toml  README.md  test.txt
src/: lib.rs  main.rs
tests/: cli.rs
