[package]
name = "grrs"
version = "0.1.0"
authors = ["Tomoya Inoue <forever.blue.moon@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/anchor-cable/cli_in_rust_tutorial"
repository = "https://github.com/anchor-cable/cli_in_rust_tutorial"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"